--- a/Dev2AssessorApp/Src/Screen1.fx.yaml
+++ b/Dev2AssessorApp/Src/Screen1.fx.yaml
@@ -543,8 +543,10 @@ Screen1 As screen:
                     Items: |
                         =//Sort(Sort(Sort(Filter(GC_checkpointItem_ActionItem,assignmentId.Id=glryProject.Selected.Id && CIAstatusUpdate = 2 && priority = "High"),checkpoint_id.CheckpointSequence),section_id.sectionSequence),bankUnitId.unitNumber)
                         
-                        Sort(Sort(Sort(Sort(Filter(GC_checkpointItem_ActionItem,assignmentId.Id=glryProject.Selected.Id && CIAstatusUpdate = 2 && priority = "High"),checkpointItem_Id.checkpointitemSequence),checkpoint_id.CheckpointSequence),section_id.sectionSequence),bankUnitId.unitNumber)
+                        /***Sort(Sort(Sort(Sort(Filter(GC_checkpointItem_ActionItem,assignmentId.Id=glryProject.Selected.Id && CIAstatusUpdate = 2 && priority = "High"),checkpointItem_Id.checkpointitemSequence),checkpoint_id.CheckpointSequence),section_id.sectionSequence),bankUnitId.unitNumber)***/
                         
+                        
+                        Sort(Sort(Filter(GC_checkpointItem_ActionItem,assignmentId.Id=glryProject.Selected.Id && CIAstatusUpdate = 2 && priority = "High"),ActionSortSequence),bankUnitId.unitNumber)
                         
                         
                         
