--- a/Dev2AssessorApp/Src/BankScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/BankScreen.fx.yaml
@@ -342,7 +342,7 @@ BankScreen As screen:
                                     assignmentId.Id = glryProject.Selected.Id
                                 ),
                                 bankUnitId.unitNumber,
-                                Ascending
+                                SortOrder.Ascending
                             ),
                             If(
                                 inpro = true || upcomp = true,
@@ -352,7 +352,7 @@ BankScreen As screen:
                                         assignmentId.Id = glryProject.Selected.Id
                                     ),
                                     bankUnitId.unitNumber,
-                                    Ascending
+                                    SortOrder.Ascending
                                 )
                             )
                         )
