--- a/Dev2AssessorApp/Src/FindingScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/FindingScreen.fx.yaml
@@ -25,7 +25,7 @@ FindingScreen As screen:
             DateDiff(
                 UserLastNavigatedTime,
                 Now(),
-                Seconds
+                TimeUnit.Seconds
             ) > SafetyCheckTime,
             Set(
                 safetyPopup,
@@ -477,7 +477,7 @@ FindingScreen As screen:
 
                 Container12_4 As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.Start
-                    Fill: =If(C =false ,WhiteSmoke,RGBA(204, 204, 204, 1))
+                    Fill: =If(C =false ,Color.WhiteSmoke,RGBA(204, 204, 204, 1))
                     FillPortions: =0
                     Height: =Parent.Height
                     LayoutAlignItems: =LayoutAlignItems.Center
@@ -509,7 +509,7 @@ FindingScreen As screen:
                                 DateDiff(
                                     UserLastNavigatedTime,
                                     Now(),
-                                    Seconds
+                                    TimeUnit.Seconds
                                 ) > SafetyCheckTime,
                                 Set(
                                     safetyPopup,
@@ -540,7 +540,7 @@ FindingScreen As screen:
 
                 Container12_5 As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.Start
-                    Fill: =If(C =true ,WhiteSmoke,RGBA(204, 204, 204, 1))
+                    Fill: =If(C =true ,Color.WhiteSmoke,RGBA(204, 204, 204, 1))
                     FillPortions: =0
                     Height: =Parent.Height
                     LayoutDirection: =LayoutDirection.Vertical
@@ -604,7 +604,7 @@ FindingScreen As screen:
                 ctnPrevious As groupContainer.verticalAutoLayoutContainer:
                     Fill: |-
                         =//RGBA(0, 0, 0, 0)
-                        WhiteSmoke
+                        Color.WhiteSmoke
                     Height: |-
                         =Parent.Height
                         //PreviousFS.Height+100
@@ -622,7 +622,7 @@ FindingScreen As screen:
                         BorderColor: =RGBA(128, 128, 128, 1)
                         Fill: |-
                             =//RGBA(239,239,239,1)
-                            WhiteSmoke
+                            Color.WhiteSmoke
                         FillPortions: =0
                         Height: |-
                             =//+Label22_5.Height+Label21_4.Height+Icon3_13.Height+Icon3_15.Height+ctnDatePFS_5.Height
@@ -1153,7 +1153,7 @@ FindingScreen As screen:
                         AlignInContainer: =AlignInContainer.SetByContainer
                         Fill: |-
                             =//RGBA(239, 239, 239, 1)
-                            WhiteSmoke
+                            Color.WhiteSmoke
                         FillPortions: =0
                         Height: |-
                             =//Parent.Height
@@ -1210,7 +1210,7 @@ FindingScreen As screen:
                                     DateDiff(
                                         UserLastNavigatedTime,
                                         Now(),
-                                        Seconds
+                                        TimeUnit.Seconds
                                     ) > SafetyCheckTime,
                                     Set(
                                         safetyPopup,
@@ -1349,7 +1349,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1404,7 +1404,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1461,7 +1461,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1508,7 +1508,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1551,7 +1551,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1595,9 +1595,10 @@ FindingScreen As screen:
                                 DisabledColor: =RGBA(0, 0, 0, 1)
                                 DisabledFill: =RGBA(204, 204, 204, 1)
                                 DisplayFields: =["shlaf_actionitemname"]
-                                DisplayMode: =If(Radio1.Selected.Value="Custom action",DisplayMode.Disabled,Edit)
+                                DisplayMode: =If(Radio1.Selected.Value="Custom action",DisplayMode.Disabled,DisplayMode.Edit)
                                 HoverFill: =RGBA(0, 0, 0, 0)
-                                InputTextPlaceholder: =LookUp(GC_checkpointItem_ActionItem,checkpointItemActionItemsId=ThisItem.checkpointItemActionItemsId && bankUnitId.Id=varBankUnitId && checkpointItem_Id.checkpointItemId.checkpointItemId=varCheckpointitemID,ThisItem.ActionItem_Name in Distinct(GC_actionItems,actionItemName).Result)
+                                InputTextPlaceholder: |-
+                                    =LookUp(GC_checkpointItem_ActionItem,checkpointItemActionItemsId=ThisItem.checkpointItemActionItemsId && bankUnitId.Id=varBankUnitId && checkpointItem_Id.checkpointItemId.checkpointItemId=varCheckpointitemID,ThisItem.ActionItem_Name in ForAll(Distinct(GC_actionItems,actionItemName), {Result: ThisRecord.Value}).Result)
                                 IsSearchable: =false
                                 Items: =Filter(GC_actionItems, sectionId.sectionId = VarSectionId, actionItemName)
                                 OnChange: |
@@ -1610,7 +1611,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1643,10 +1644,10 @@ FindingScreen As screen:
                                 BorderColor: =RGBA(0, 0, 0, 1)
                                 Default: |-
                                     =
-                                    If(ThisItem.ActionItem_Name in Distinct(GC_actionItems,actionItemName).Result,"",ThisItem.ActionItem_Name) 
+                                    If(ThisItem.ActionItem_Name in ForAll(Distinct(GC_actionItems,actionItemName), {Result: ThisRecord.Value}).Result,"",ThisItem.ActionItem_Name) 
                                 DisabledBorderColor: =RGBA(0, 0, 0, 1)
                                 DisabledFill: =RGBA(204, 204, 204, 1)
-                                DisplayMode: =If(Radio1.Selected.Value="Default action",DisplayMode.Disabled,Edit)
+                                DisplayMode: =If(Radio1.Selected.Value="Default action",DisplayMode.Disabled,DisplayMode.Edit)
                                 HintText: ="Write Action"
                                 HoverBorderColor: =RGBA(0, 0, 0, 1)
                                 HoverFill: =RGBA(255, 255, 255, 1)
@@ -1673,7 +1674,7 @@ FindingScreen As screen:
                             Radio1 As radio:
                                 BorderColor: =RGBA(0, 0, 0, 0)
                                 Default: |
-                                    =If(ThisItem.ActionItem_Name in Distinct(GC_actionItems,actionItemName).Result || IsBlank(ThisItem.ActionItem_Name),"Default action","Custom action")
+                                    =If(ThisItem.ActionItem_Name in ForAll(Distinct(GC_actionItems,actionItemName), {Result: ThisRecord.Value}).Result || IsBlank(ThisItem.ActionItem_Name),"Default action","Custom action")
                                 DisabledBorderColor: =RGBA(0, 0, 0, 1)
                                 Font: =AllScreensCSS.RFont
                                 Height: =40
@@ -1760,7 +1761,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1860,7 +1861,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1906,7 +1907,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1931,7 +1932,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -1976,7 +1977,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -2023,7 +2024,7 @@ FindingScreen As screen:
                                             DateDiff(
                                                 UserLastNavigatedTime,
                                                 Now(),
-                                                Seconds
+                                                TimeUnit.Seconds
                                             ) > SafetyCheckTime,
                                             Set(
                                                 safetyPopup,
@@ -2068,7 +2069,7 @@ FindingScreen As screen:
                                             DateDiff(
                                                 UserLastNavigatedTime,
                                                 Now(),
-                                                Seconds
+                                                TimeUnit.Seconds
                                             ) > SafetyCheckTime,
                                             Set(
                                                 safetyPopup,
@@ -2108,7 +2109,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -2221,7 +2222,7 @@ FindingScreen As screen:
                                         DateDiff(
                                             UserLastNavigatedTime,
                                             Now(),
-                                            Seconds
+                                            TimeUnit.Seconds
                                         ) > SafetyCheckTime,
                                         Set(
                                             safetyPopup,
@@ -2303,7 +2304,7 @@ FindingScreen As screen:
                                     DateDiff(
                                         UserLastNavigatedTime,
                                         Now(),
-                                        Seconds
+                                        TimeUnit.Seconds
                                     ) > SafetyCheckTime,
                                     Set(
                                         safetyPopup,
