--- a/Dev2AssessorApp/Src/ProjectScreen.fx.yaml
+++ b/Dev2AssessorApp/Src/ProjectScreen.fx.yaml
@@ -171,7 +171,7 @@ ProjectScreen As screen:
                                 assessorId = varLoggedAssessor && isCompleted = "Completed"
                             ),
                             startDate,
-                            Ascending
+                            SortOrder.Ascending
                         ),
                         If(
                             inpro = true,
@@ -181,7 +181,7 @@ ProjectScreen As screen:
                                     assessorId = varLoggedAssessor && isCompleted = "Inprogress"
                                 ),
                                 startDate,
-                                Ascending
+                                SortOrder.Ascending
                             ),
                             If(
                                 upcomp = true,
@@ -191,7 +191,7 @@ ProjectScreen As screen:
                                         assessorId = varLoggedAssessor && isCompleted = "Upcomming" || isCompleted = "Inprogress1"
                                     ),
                                     startDate,
-                                    Ascending
+                                    SortOrder.Ascending
                                 )
                             )
                         )
